--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -46,6 +49,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.14"
   }
 }
