Added User Login

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
+SECRET_TOKEN = F£":@%L:ewsd@F£"~P$R£&A{}DQ~":$:LR~:"£q@~>?RF~@DWS
 DB_CONNECTION = mongodb+srv://lMwenda:ZFxcEB3AK7KMu3rX@behealthyplease.k0pt8.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
