--- a/backend/package.json
+++ b/backend/package.json
@@ -17,15 +17,22 @@
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.6.2",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@types/hapi__joi": "^17.1.7"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/hapi__joi": "^17.1.7",
+    "@types/jsonwebtoken": "^8.5.5"
   }
 }
