--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.22.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -48,7 +52,9 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/react-router-dom": "^5.3.0",
     "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.14"
   }
